stop number fields on firefox from displaying spin buttons

--- a/css/gladbooks.css
+++ b/css/gladbooks.css
@@ -554,6 +554,9 @@ input.currency {
   font-family: Courier, Monospace;
   text-align: right; }
 
+input[type="number"] {
+  -moz-appearance: textfield; }
+
 button.cancel,
 button.reset,
 button.save,
